# altair-gateway

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  requests.http
.github/workflows/: cd.yml  ci.yml
src/: error.rs  main.rs  state.rs
src/middleware/: jwt.rs  rbac.rs
src/routes/: health.rs  labs.rs  mod.rs  sessions.rs  users.rs  webshell.rs
src/security/: jwks_cache.rs  mod.rs  roles.rs
src/services/: common.rs  labs_api.rs  mod.rs  proxy.rs  sessions_api.rs  users_api.rs  users_client.rs
src/tests/: gateway_health_test.rs  routes_smoke_test.rs
