[package]
name = "altair-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
uuid = { version = "1.8.1", features = ["v4", "v7", "serde", "fast-rng", "std"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }

