[package]
name = "altair-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
uuid = { version = "1.8.1", features = ["v4", "v7", "serde", "fast-rng", "std"] }
dashmap = "5"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
once_cell = "1.19"